--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Landing section -->
 
     <h1>Discover hidden places in the world around you</h1>
-    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+    <p><a class="cta" href="#">Download Excursion</a></p>
     <video autoplay muted loop>
       <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
